// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders main branch 1`] = `
<li
  onMouseEnter={[Function]}
>
  <Link
    className="navbar-context-meta-branch-menu-item"
    onlyActiveOnIndex={false}
    style={Object {}}
    to={
      Object {
        "pathname": "/dashboard",
        "query": Object {
          "id": "component",
        },
      }
    }
  >
    <div>
      <BranchIcon
        branch={
          Object {
            "isMain": true,
          }
        }
        className="little-spacer-right"
      />
      [main branch]
    </div>
    <div
      className="big-spacer-left note"
    >
      <BranchStatus
        branch={
          Object {
            "isMain": true,
          }
        }
        concise={true}
      />
    </div>
  </Link>
</li>
`;

exports[`renders short-living branch 1`] = `
<li
  onMouseEnter={[Function]}
>
  <Link
    className="navbar-context-meta-branch-menu-item"
    onlyActiveOnIndex={false}
    style={Object {}}
    to={
      Object {
        "pathname": "/project/issues",
        "query": Object {
          "branch": "foo",
          "id": "component",
          "resolved": "false",
        },
      }
    }
  >
    <div>
      <BranchIcon
        branch={
          Object {
            "isMain": false,
            "name": "foo",
            "status": Object {
              "bugs": 1,
              "codeSmells": 2,
              "vulnerabilities": 3,
            },
            "type": "SHORT",
          }
        }
        className="little-spacer-right big-spacer-left"
      />
      foo
    </div>
    <div
      className="big-spacer-left note"
    >
      <BranchStatus
        branch={
          Object {
            "isMain": false,
            "name": "foo",
            "status": Object {
              "bugs": 1,
              "codeSmells": 2,
              "vulnerabilities": 3,
            },
            "type": "SHORT",
          }
        }
        concise={true}
      />
    </div>
  </Link>
</li>
`;
